# sphinx-doc-test

./: .gitignore  README.md  makedocs.ps1  makedocs.sh  pyproject.toml
myproject/: hello.py
myproject/docs/: conf.py  generatedocs.sh  index_template
