[project]
name = "myproject"
version = "0.1.0"

dependencies = [
    "polars>=1.6.0",
    "sphinx>=8.0.2",
    "sphinx-autodoc-typehints>=2.2.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true


[tool.hatch.build.targets.wheel]
packages = ["myproject"]

